--- a/styles.css
+++ b/styles.css
@@ -123,3 +123,10 @@ body {
       text-align: left;
       
   }
+
+  @media only screen and (max-width: 767px) {
+    .masonry {
+      column-count: 1;
+    }
+  }
+ 
