--- a/styles.css
+++ b/styles.css
@@ -36,13 +36,15 @@ body {
     display: flex;
     margin-left: 10%;
     margin-right: 10%;
-    justify-content: center;
+    /* justify-content: center; */
+    flex-direction: row;
     
 }
 .areaTiles{
     width: 100%;
     display: flex;
   justify-content: space-between;
+  flex-direction: row;
   
 }
 .areaTile{
@@ -78,7 +80,7 @@ body {
 
 }
 .areaTile:hover{
-    background-color: ivory;
+    background-color: rgb(255, 240, 247);
 }
 .areaTiles a {
     text-decoration: none;
@@ -123,6 +125,12 @@ body {
   @media only screen and (max-width: 767px) {
     .masonry {
       column-count: 1;
+    }
+  }
+
+  @media (max-width: 800px) {
+    .areaTiles {
+      flex-direction: column;
     }
   }
 
