--- a/styles.css
+++ b/styles.css
@@ -36,21 +36,21 @@ body {
     display: flex;
     margin-left: 10%;
     margin-right: 10%;
-    /* justify-content: center; */
-    flex-direction: row;
+    justify-content: center;
+    /* flex-direction: row; */
     
 }
 .areaTiles{
     width: 100%;
     display: flex;
-  justify-content: space-between;
-  flex-direction: row;
+  justify-content: center;    
+  flex-wrap: wrap;
   
 }
 .areaTile{
-    background-color: white;
-    max-width: 350px;
-    padding: 3%;
+    background-color: rgb(255, 255, 255);
+    width: 250px;
+    padding: 1%;
     height: fit-content;
     text-align: center;
     outline: solid grey 1px;
@@ -82,7 +82,7 @@ body {
 .areaTile:hover{
     background-color: rgb(255, 240, 247);
 }
-.areaTiles a {
+.areaTile a {
     text-decoration: none;
     color: black;
 }
@@ -151,3 +151,26 @@ body {
     color: black;
     text-decoration: none;
     }
+
+
+	/* pagination position styling */
+	.pagination_section {
+		margin-bottom: 80px;
+	}
+	
+	/* pagination styling */
+	.pagination_section a {
+		color: black;
+		padding: 10px 18px;
+		text-decoration: none;
+	}
+	
+	/* pagination hover effect on non-active */
+	.pagination_section a:hover:not(.active) {
+		background-color: #031F3B;
+		color: white;
+	}
+	
+		
+	
+
