skeleton galveston pages and finish index.html

--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body {
 }
 
 *{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Nunito Sans', sans-serif;
 }
 .areaContainer{
     display: flex;
