--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body {
 }
 
 *{
-    font-family: 'Nunito Sans', sans-serif;
+  font-family: 'Delius', cursive;
 }
 .areaContainer{
     display: flex;
